--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --primary-50: 255 204 166;
-  --primary-100: 255 183 128;
-  --primary-200: 255 158 92;
-  --primary-300: 255 136 62;
-  --primary-400: 247 123 50;
-  --primary-500: 249 115 22;
-  --primary-600: 232 98 0;
-  --primary-700: 204 85 0;
-  --primary-800: 178 73 0;
-  --primary-900: 153 60 0;
-  --primary-950: 115 40 0;
+  --primary-50:  240, 253, 244;
+  --primary-100: 220, 252, 231;
+  --primary-200: 187, 247, 208;
+  --primary-300: 134, 239, 172;
+  --primary-400: 74, 222, 128;
+  --primary-500: 34, 197, 94;
+  --primary-600: 22, 163, 74;
+  --primary-700: 21, 128, 61;
+  --primary-800: 22, 101, 52;
+  --primary-900: 20, 83, 45;
+  --primary-950: 5, 46, 22;
   --surface-0: 255 255 255;
   --surface-50: 248 250 252;
   --surface-100: 241 245 249;
